# gfl2logger

./: .gitignore  README.md  gfl2logger.spec  main.py  pyproject.toml
.github/workflows/: release.yml
embed/: __init__.py  gfl2.xz
gfl2logger/: decoder.py  export.py  ignore_tls.py  logger.py  parser.py  version.py
gfl2logger/gfl2/: logger.py  parser.py
gfl2logger/gfl2/data/: __init__.py  attachments.py  base.py  common_keys.py  formations.py  guild_members.py  weapons.py
gfl2logger/gui/: command.py  log_window.py  manager.py  window.py
gfl2logger/proxy/: master.py
gfl2logger/utils/: asyncio_utils.py  optmanager_wrapper.py  version.py
proto/: attachments.proto  common_keys.proto  formations.proto  guild_members.proto  weapons.proto
