[project]
name = "gfl2logger"
requires-python = "==3.13.*"
dynamic = ["version"]

dependencies = ["mitmproxy==11.1.3", "protobuf>=5.29.4"]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["grpcio-tools>=1.71.0"]

[tool.pdm]
distribution = false

[tool.pdm.version]
source = "call"
getter = "gfl2logger.version:get_version"

[tool.pdm.scripts]
_.env = { PROTO_DIR = "proto", GENERATED_DIR = "generated", PROTO_FILES = "proto/guild_members.proto" }
pre_protoc.call = "os:makedirs('${GENERATED_DIR}', exist_ok=True)"
protoc = "python -m grpc_tools.protoc --proto_path=${PROTO_DIR} --python_out=${GENERATED_DIR} --pyi_out=${GENERATED_DIR} ${PROTO_FILES}"
pre_pyinstaller = "pdm run protoc"
pyinstaller = "pyinstaller --clean gfl2logger.spec"

[dependency-groups]
build = ["pyinstaller>=6.12.0"]
